[gd_scene load_steps=4 format=3 uid="uid://moyjt6qtfrww"]

[ext_resource type="Script" path="res://pause_menu/settings_menu.gd" id="1_ffg0u"]
[ext_resource type="AudioStream" uid="uid://cpewh1jj7ki6c" path="res://assets/sound/menu sounds/backspace.wav" id="3_4k83x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ccg2h"]
bg_color = Color(0.521569, 0.521569, 0.521569, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="SettingsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ffg0u")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ccg2h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_right = 0.95
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Audio"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer/MusicSlider"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.1

[node name="Label" type="Label" parent="VBoxContainer/MusicSlider"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.25
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXSlider" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer/SFXSlider"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.1

[node name="Label" type="Label" parent="VBoxContainer/SFXSlider"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.25
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Video"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/CenterContainer2"]
layout_mode = 2
text = "Back"

[node name="Bloop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4k83x")
bus = &"sfx"

[connection signal="value_changed" from="VBoxContainer/MusicSlider/HSlider" to="." method="_on_music_h_slider_changed"]
[connection signal="value_changed" from="VBoxContainer/SFXSlider/HSlider" to="." method="_on_sfx_h_slider_changed"]
[connection signal="toggled" from="VBoxContainer/CenterContainer/CheckButton" to="." method="_on_fullscreen_toggle_toggled"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/Button" to="." method="_on_back_button_pressed"]
